# project4

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
align/: align.py
substitution_matrices/: test_sub_mat.mat
test/: test_align.py
